lang/tests/contract/ui/fail/25-invalid-receiver-2.rs
use liquid_lang as liquid;

#[liquid::contract]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn new(&mut self) {}

        pub fn noop(mut self) {}
    }
}

fn main() {}
