lang/tests/contract/ui/fail/25-invalid-receiver-2.stderr
error: `&self` or `&mut self` is mandatory first parameter for all contract methods
  --> $DIR/25-invalid-receiver-2.rs:12:21
   |
12 |         pub fn noop(mut self) {}
   |                     ^^^^^^^^
